fix(Nav): Allow for overflow scrolling.

--- a/packages/pattern-library/src/components/Nav/nav.scss
+++ b/packages/pattern-library/src/components/Nav/nav.scss
@@ -3,6 +3,7 @@
 .nav__list {
   display: flex;
   list-style: none;
+  overflow: auto;
 }
 
 .nav__link {
